# discord-friend

./: .env.example  .flake8  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  OLLAMA_TIPS.md  README.md  SECURITY.md  aiavatar_bot.db  basic_db_test.py  docker-compose.local-llm.yml  docker-compose.ollama.yml  docker-compose.tts.yml  docker-compose.whisper.yml  ecosystem.config.js  faster-whisper-server.py  manual_test.py  pyproject.toml  run_tests.py  test_default_prompt.py  test_env_manager.py
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/node/: Dockerfile
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: github-pages.yml  lint-fix.yml  lint.yml  monitoring.yml  performance.yml  test.yml
config/nginx/: nginx.conf
config/prometheus/: prometheus.yml
config/redis/: redis.conf
docs/: .gitignore  404.md  Gemfile  README.md  _config.yml  api-reference.md  contributing.md  development.md  getting-started.md  index.md  security.md  troubleshooting.md
docs/features/: admin-dashboard.md  emotion-analysis.md  index.md  mcp-servers.md
scripts/: README.md  check_git_secrets.py  deploy-local-llm.sh  lint_and_fix.sh  pre-commit.sh
src/: test_lint.py
src/bot/: .gitignore  __init__.py  aiavatar_env.example  config.py  debug.py  discord_aiavatar_complete.py  dotenv_mock.py  requirements.txt  test_mcp_servers.py  test_output.py  test_with_exception.py
src/bot-go/: .air.toml  .env.example  go.mod  go.sum  start_watch.sh  test_whisper.sh
(+34 files in other folders)
